fix popover z-index

--- a/src/index.scss
+++ b/src/index.scss
@@ -54,3 +54,9 @@ body {
 .ant-timeline-item-tail {
   background-color: var(--text-secondary-color) !important;
 }
+
+div {
+  &[data-radix-popper-content-wrapper] {
+    z-index: 10002 !important;
+  }
+}
